# Smoothy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  release.yml  test.yml
docs/: assertion_structure.drawio
src/: accessors.rs  assertion_builder.rs  assertions.rs  boolean.rs  connector.rs  equality.rs  implementation.rs  iter.rs  lib.rs  option.rs  result.rs  string.rs
src/assertions/: boolean.rs  equality.rs  equals.rs  file.rs  iter.rs  json.rs  not_equals.rs  option.rs  path.rs  result.rs  string.rs  try_equals.rs  try_not_equals.rs
src/assertions/result/: is_ok.rs
src/basic/: equals.rs  is.rs  is_not.rs  not_equals.rs  try_equals.rs  try_not_equals.rs
src/equality/: equals.rs  is.rs  is_not.rs  not_equals.rs  try_equals.rs  try_not_equals.rs
src/iter/: indices.rs  is_empty.rs  is_not_empty.rs  size.rs
src/option/: is_none.rs  is_some.rs
src/result/: is_err.rs  is_ok.rs
src/string/: contains.rs  contains_string.rs  is_matching.rs  starts_with_string.rs  to_string.rs
tests/: boolean.rs  contains.rs  contains_string.rs  equals.rs  indices.rs  is.rs  is_empty.rs  is_err.rs  is_matching.rs  is_none.rs  is_not.rs  is_not_empty.rs  is_ok.rs  is_some.rs  matches.rs  not_equals.rs  size.rs  starts_with.rs  starts_with_string.rs  to_string.rs  try_equals.rs  try_not_equals.rs
tests/smoothy/: boolean.rs  equality.rs  file.rs  iter.rs  json.rs  main.rs  option.rs  path.rs  string.rs
tests/smoothy/accessors/: to_string.rs
tests/smoothy/equality/: equals.rs  is.rs  is_not.rs  not_equals.rs  try_equals.rs  try_not_equals.rs
tests/smoothy/equality/snapshots/: smoothy__equality__equals__with_bools__fails.snap  smoothy__equality__equals__with_chars__fails_for_wrong_casing.snap  smoothy__equality__equals__with_chars__fails_for_wrong_char.snap  smoothy__equality__equals__with_numbers__f32__fails.snap  smoothy__equality__equals__with_numbers__f64__cannot_be_compared_to_f32.snap  smoothy__equality__equals__with_numbers__f64__fails.snap  smoothy__equality__equals__with_numbers__i64__fails.snap  smoothy__equality__equals__with_numbers__u8__fails.snap  smoothy__equality__equals__with_structs__fails.snap  smoothy__equality__equals__with_tuples__fails_with_different_order.snap  smoothy__equality__equals__with_vecs__fails_with_different_order.snap  smoothy__equality__equals__with_vecs__fails_with_different_size.snap  smoothy__equality__is__fails__with_not_matching_values.snap  smoothy__equality__is_not__fails__with_matching_values.snap  smoothy__equality__not_equals__fails__with_matching_values.snap  smoothy__equality__try_equals__fails__with_conversion_error.snap  smoothy__equality__try_equals__fails__with_numbers.snap  smoothy__equality__try_not_equals__fails__with_conversion_error.snap  smoothy__equality__try_not_equals__fails__with_numbers.snap
tests/smoothy/file/: is_directory.rs  is_file.rs
tests/smoothy/iter/: all_match.rs  any_match.rs  contains.rs  contains_all.rs  contains_only.rs  indices.rs  is_empty.rs  is_not_empty.rs  none_match.rs  size.rs
tests/smoothy/iter/snapshots/: smoothy__iter__all_match__fails__when_not_all_match.snap  smoothy__iter__any_match__fails__when_empty.snap  smoothy__iter__any_match__fails__when_no_elements_match.snap  smoothy__iter__contains__fails_when_iterator_does_not_contain_element.snap  smoothy__iter__contains_all__fails_when_expected_contains_a_value_not_in_actual.snap  smoothy__iter__contains_only__fails_when_actual_contains_additional_duplicated_values.snap  smoothy__iter__contains_only__fails_when_actual_contains_additional_values.snap  smoothy__iter__contains_only__fails_when_expected_contains_additional_duplicated_values.snap  smoothy__iter__contains_only__fails_when_expected_contains_additional_values.snap  smoothy__iter__indices__first__fails_with_empty_vec.snap  smoothy__iter__indices__nth__fails_with_empty_vec.snap  smoothy__iter__indices__second__fails_with_empty_vec.snap  smoothy__iter__indices__third__fails_with_empty_vec.snap  smoothy__iter__is_empty__fails.snap  smoothy__iter__is_not_empty__fails.snap  smoothy__iter__none_match__fails__when_all_elements_match.snap  smoothy__iter__none_match__fails__when_one_element_matches.snap  smoothy__iter__size__size_does_not_match.snap
tests/smoothy/option/: is_none.rs  is_some.rs
tests/smoothy/option/snapshots/: smoothy__option__is_none__fails.snap  smoothy__option__is_some__assert_option__fails.snap
tests/smoothy/path/: exists.rs  is_directory.rs  is_file.rs  is_symlink.rs  not_exists.rs
tests/smoothy/path/snapshots/: smoothy__path__exists__fails__with_non_existent_path.snap  smoothy__path__is_directory__fails__with_non_existent_dir.snap.new
tests/smoothy/result/: is_err.rs  is_ok.rs
tests/smoothy/result/snapshots/: smoothy__result__is_err__assert_error__fails.snap  smoothy__result__is_err__assert_error_as_string__fails.snap  smoothy__result__is_err__assert_result__is_an_error_fails.snap  smoothy__result__is_ok__assert_result__is_ok_fails.snap  smoothy__result__is_ok__assert_result_value__fails.snap
tests/smoothy/snapshots/: smoothy__boolean__is_false__fails_when_value_is_true.snap  smoothy__boolean__is_true__fails_when_value_is_false.snap  smoothy__json__json_object__fails_when_key_does_not_exist.snap  smoothy__json__json_value__is_array_fails_with_values_other_than_arrays.snap  smoothy__json__json_value__is_boolean_fails_with_values_other_than_boolean.snap  smoothy__json__json_value__is_null_fails_with_values_other_than_null.snap  smoothy__json__json_value__is_number_fails_with_values_other_than_numbers.snap  smoothy__json__json_value__is_object_fails_with_values_other_than_objects.snap  smoothy__json__json_value__is_string_fails_with_values_other_than_strings.snap
tests/smoothy/string/: contains.rs  matches.rs  starts_with.rs
tests/smoothy/string/snapshots/: smoothy__string__contains__fails.snap  (+2 more)
