[package]
name = "smoothy"
version = "0.8.4"
description = "Write smooth assertions in a fluent and human readable way"
authors = ["Open Schnick"]
documentation = "https://docs.rs/smoothy"
readme = "README.md"
homepage = "https://github.com/open-schnick/smoothy"
repository = "https://github.com/open-schnick/smoothy"
license = "MIT"
keywords = ["testing", "assert", "assertions", "fluent", "tests"]
categories = ["development-tools::testing"]
edition = "2021"

[features]
default = ["regex", "json"]
regex = ["dep:regex"]
json = ["dep:serde_json"]

[dependencies]
colored = "3"
similar-asserts = "1"
regex = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
insta = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"

[profile.test.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]


[lints.rust]
missing_docs = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
private_doc_tests = "warn"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
redundant_explicit_links = "deny"

[lints.clippy]
# enable more lint groups
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# enable extra restriction lints
as_conversions = "deny"
as_underscore = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
deref_by_slicing = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
try_err = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
format_push_string = "deny"
if_then_some_else_none = "deny"
indexing_slicing = "deny"
integer_division = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
mem_forget = "deny"
missing_assert_message = "deny"
mod_module_files = "deny"
mixed_read_write_in_expression = "deny"
multiple_inherent_impl = "deny"
needless_raw_strings = "deny"
print_stderr = "deny"
print_stdout = "deny"
pub_without_shorthand = "deny"
same_name_method = "deny"
semicolon_outside_block = "deny"
shadow_reuse = "deny"
string_add = "deny"
string_slice = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
wildcard_enum_match_arm = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
ignored_unit_patterns = "deny"
doc_markdown = "deny"
needless_pass_by_value = "deny"
redundant_pub_crate = "deny"
# allow some lints
module_name_repetitions = "allow"
tests_outside_test_module = "allow"
